# zeph

./: .gitignore  .travis.yml  Cargo.toml  Config.toml  LICENSE  README.md
assets/css/: main.css
assets/js/: admin.js  main.js  show.js
src/: _main.rs  commands.rs  console.rs  db.rs  logger.rs  main.rs  utils.rs
src/db/: mod.rs  postgres.rs  sqlite.rs
src/routes/: admin.rs  image.rs  mod.rs  user.rs
src/sync/: danbooru.rs  derpy.rs  download.rs  e621.rs  gelbooru.rs  konachan.rs  mod.rs
src/templates/: index.html  show.html
