[package]
name = "zeph"
version = "0.1.0"
authors = ["TyanNN <tyannn@cocaine.ninja>"]

[dependencies]
multipart = { version = "*", features = [ "nickel_" ] }
nickel = "*"
rustc-serialize = "*"
hyper = "*"
ansi_term = "*"
image = "*"
lazy_static = "*"

rusqlite = { version = "*", optional = true }
postgres = { version = "*", optional = true, git = "https://github.com/sfackler/rust-postgres"} 

[features]
default = ["postgresql"]
sqlite = ["rusqlite"]
postgresql = ["postgres"]
