[package]
name = "zeph"
version = "0.1.0"
authors = ["TyanNN <tyannn@cocaine.ninja>"]

[dependencies]
multipart = { version = "*", features = [ "nickel_" ] }
nickel = "*"
nickel-jwt-session = "*"

rustc-serialize = "*"
hyper = "*"
image = "*"
lazy_static = "*"
rust-crypto = "*"
time = "*"

rusqlite = { version = "*", optional = true }
postgres = { version = "*", optional = true, git = "https://github.com/sfackler/rust-postgres"}

[features]
default = ["postgresql"]
sqlite = ["rusqlite"]
postgresql = ["postgres"]
